[package]
name = "github-vanity"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.44"
git2 = "0.13.22"
clap = "2.33.3"
fastrand = "1.5.0"
lazy_static = "1.4.0"
toml = "0.5.8"
chrono = "0.4.19"
